objects/PC_REST_Object_Relationship_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>PC_Child_Object_Field_API_Name__c</fullName>
        <description>Relationship field API name present on the child object</description>
        <label>Child Object Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Child_REST_Object_Name__c</fullName>
        <description>Rest object name for the child object</description>
        <label>Child REST Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Child_sObject_API_Name__c</fullName>
        <description>Child sObject API Name</description>
        <label>Child sObject API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Parent_REST_Object_Name__c</fullName>
        <description>To have the rest object name for respective salesforce objects in this org</description>
        <label>Parent REST Object Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Rest_Object_Field_Name__c</fullName>
        <description>Child sObject&apos;s Rest Object Plural Name</description>
        <label>REST Object Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>REST Object Relationship Mapping</label>
    <pluralLabel>REST Object Relationship Mappings</pluralLabel>
</CustomObject>